# ProteinGym_Dev

./: .gitignore  README.md  conf.py  index.rst  pyproject.toml  setup.py
configs/: default_supervised_config.yaml  default_zero_shot_config.yaml
configs/alignment/: default_alignment.yaml
configs/model/: esm2_35m.yaml  esm2_8m.yaml  esm2_8m_local.yaml  esm_default.yaml  msa_transformer.yaml
configs/supervised_model/: esm2_8m_finetuning.yaml  msa_transformer_finetuning.yaml
configs/supervised_setup/: default_supervised_setup.yaml
constants/: data.py
example_configs/: esm2_35m_model.json  esm2_8m_model.json  msa_transformer_model.json  site_independent_model.json  tranception_s_model.json
example_configs/alignment_configs/: test_config.json
example_data/: msa.fa  mutations.csv  reference_file.csv
example_data/msa_weights/: A4_HUMAN_theta0.2_2023-08-07_b01.npy
example_data/msas/: msa.fa
example_data/mutations/: A4_HUMAN_Seuma_2022_indels copy.csv  A4_HUMAN_Seuma_2022_indels.csv  mutations_mutant.csv  mutations_sequence.csv
models/: site_independent_model.py
proteingym/: __init__.py
proteingym.egg-info/: PKG-INFO  SOURCES.txt
proteingym/constants/: data.py
proteingym/models/: __init__.py  esm_model.py  msa_transformer_model.py  site_independent_model.py  tranception_model.py
scripts/: run_ensemble.py  run_ensemble.sh  run_model.py  run_model.sh  run_model_hydra.py  run_model_old.py  train_supervised_model.py
utils/: alignment_utils.py  scoring_utils.py
wrappers/: alignment_model.py  autoregressive_model.py  generic_models.py
(+17 files in other folders)
